--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
 beautifulsoup4==4.9.0
+bleach==3.1.5
 bs4==0.0.0
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -26,6 +27,7 @@ jupyterlab-server==1.0.6
 jupyterthemes==0.20.0
 kiwisolver==1.2.0
 lesscpy==0.14.0
+lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
@@ -34,6 +36,7 @@ nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
 numpy==1.18.2
+packaging==20.3
 pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.6.1
@@ -51,8 +54,10 @@ python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==18.1.1
 requests==2.23.0
+requests-futures==1.0.0
 scipy==1.4.1
 seaborn==0.10.1
+selenium==3.141.0
 Send2Trash==1.5.0
 six==1.14.0
 soupsieve==2.0
@@ -64,4 +69,5 @@ traitlets==4.3.3
 urllib3==1.25.8
 wcwidth==0.1.8
 webencodings==0.5.1
+yahooquery==2.2.4
 zipp==3.0.0
