--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,32 @@ notebooks/ThinkorSwin API.ipynb
 tools/trading/__pycache__/transactions.cpython-37.pyc
 notebooks/index_analysis.csv
 notebooks/pe_prices_market_cap_analysis.csv
+notebooks/discord_bot/
+notebooks/experiments/
+notebooks/old/
+notebooks/options/
+notebooks/results/
+notebooks/simplywall/
+notebooks/stocktwits/
+notebooks/tos
+notebooks/data
+notebooks/__pycache__/
+output/rgl.feather
+docs/benchmarks.csv
+docs/earnings.csv
+docs/my_stock_fundamentals_correct_dates.csv
+docs/my_stocks_fundamentals.csv
+docs/my_stocks_options.csv
+docs/my_stocks2.csv
+docs/options_earnings.csv
+docs/simplywallurls.csv
+docs/earnings.csv
+tools/extract/__pycache__/earnings.cpython-37.pyc
+tools/extract/__pycache__/fundamentals.cpython-37.pyc
+tools/extract/__pycache__/screener.cpython-37.pyc
+tools/extract/__pycache__/simplywall.cpython-37.pyc
+tools/extract/__pycache__/stocktwits.cpython-37.pyc
+tools/options/
+tools/indicators/__pycache__/benchmarks.cpython-37.pyc
+tools/keys/__pycache__/stocktwits_keys.cpython-37.pyc
+tools/keys/
