remove big files

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,12 @@ docs/earnings.csv
 notebooks/How To.ipynb
 notebooks/kent_is_too_excited.csv
 notebooks/reno.csv
+notebooks/reno1.csv
+notebooks/reno2.csv
+notebooks/reno3.csv
+notebooks/reno4.csv
+notebooks/reno5.csv
+notebooks/renono.csv
 notebooks/results.csv
 notebooks/Untitled.ipynb
 output/trades.feather
